# Conga

./: Cargo.toml
conga/: Cargo.toml
conga-core/: Cargo.toml
conga-core/src/: lib.rs  message.rs
conga-core/src/logic/: app.rs
conga-core/src/state/: app.rs  mod.rs  project.rs  state.rs
conga/src/: main.rs
conga/src/view/: app.rs  content.rs  controls.rs  mod.rs  pane.rs  state.rs  style.rs
conga/src/view/content/: component.rs  empty.rs  foo.rs  mod.rs
