[package]
authors = ["Tobias Mollstam <tobias@mollstam.com>"]
edition = "2021"
name = "conga-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "debug"]}
