[package]
authors = ["Tobias Mollstam <tobias@mollstam.com>"]
edition = "2018"
name = "conga"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conga-core = {path = "../conga-core"}
iced = {version = "0.3", features = ["canvas", "tokio", "debug"]}
