[package]
authors = ["Tobias Mollstam <tobias@mollstam.com>"]
edition = "2021"
name = "conga"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conga-core = {path = "../conga-core"}
iced = {git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "debug"]}
iced_lazy = {git = "https://github.com/iced-rs/iced.git"}
